--- a/principal.html
+++ b/principal.html
@@ -24,6 +24,9 @@
         id="message"
         placeholder="Escreva aqui..."
       />
+      <select name="participantes" id="participantes">
+        <option value="Todos">Todos</option>
+      </select>
       <ion-icon name="paper-plane-outline" onclick="enviarMensagens()"></ion-icon>
     </footer>
 
