Projeto finalizado, pagina de login feita porém não foi implementado pegar o nome a partir dela por isso repete a pergunta na pagina principal.

--- a/LoginPage.html
+++ b/LoginPage.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Bate Papo Uol</title>
 </head>
-<body>
-    <img src="images/logo_uol.png" alt="logo">
-    <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
+<body class="loginpage">
+
+    <img class="logoentrada" src="images/logo_uol.png" alt="logo">
+    <input class="nomeentrada" type="text" name="nome" id="nome" placeholder="Digite seu nome">
     <a href="principal.html"><button class="loginButton">Entrar</button></a>
 </body>
 </html>
